--- a/package.json
+++ b/package.json
@@ -11,12 +11,21 @@
     "test-ct": "playwright test -c playwright-ct.config.ts"
   },
   "dependencies": {
+    "axios": "^1.11.0",
+    "backend": "^0.0.0",
+    "cors": "^2.8.5",
+    "expres": "^0.0.5",
+    "express": "^5.1.0",
+    "install": "^0.13.0",
+    "npx": "^10.2.2",
+    "playwright": "^1.56.1",
+    "sqlite3": "^5.1.7",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.0",
-    "axios": "^1.11.0"
+    "vue-router": "^4.5.0"
   },
   "devDependencies": {
     "@playwright/experimental-ct-vue": "^1.54.1",
+    "@playwright/test": "^1.56.1",
     "@types/node": "^24.0.13",
     "@vitejs/plugin-vue": "^5.2.1",
     "vite": "^6.2.0"
